tests/baselines/reference/generatorES6_5.errors.txt
tests/cases/compiler/generatorES6_5.ts(2,11): error TS2304: Cannot find name 'a'.
tests/cases/compiler/generatorES6_5.ts(2,15): error TS2304: Cannot find name 'b'.
tests/cases/compiler/generatorES6_5.ts(2,19): error TS2304: Cannot find name 'c'.


==== tests/cases/compiler/generatorES6_5.ts (3 errors) ====
    function* foo() {
        yield a ? b : c;
              ~
!!! error TS2304: Cannot find name 'a'.
                  ~
!!! error TS2304: Cannot find name 'b'.
                      ~
!!! error TS2304: Cannot find name 'c'.
    }